# spektacular

./: .coverage  .gitignore  CHANGELOG.md  MVP_SUMMARY.md  Makefile  README.md  go.mod  go.sum  main.go  main.py  pyproject.toml  spektacular-v0.1-spec.md  tessl.json
.bob/: mcp.json  settings.json
.bob/commands/: spek-implement.md  spek-new.md  spek-plan.md
.bob/notes/: pending-notes.txt
.bob/rules/: plan.md  rules.md
.claude/: settings.json
.github/workflows/: build_and_deploy.yaml
.spektacular/: .state.json  config-bob.yaml  config-claude.yaml  config.yaml  state.json
.spektacular/plan-15_implementation/: state.json
.spektacular/plan-16_plan_format/: state.json
.spektacular/plans/: plan-command.md
.spektacular/specs/: 000001_plan_mode.md  000002_rich_tui.md  000003_readme.md  000004_complexity_driven_model_routing.md  000006_convert_to_go.md  000007_implement_phase.md  000008_abstract_runner.md  000009_interactive_spec.md  000010_refine_plan.md  000011_spec_verify.md  000012_bob_runner.md  000014_testing_with_bobs.md  000015_implementation.md  000017_plan_testing.md  testing.md  (+12 more)
.tessl/: RULES.md
cmd/: file.go  implement.go  implement_test.go  init.go  init_test.go  knowledge.go  knowledge_test.go  new.go  notion.go  notion_cache.go  notion_cache_test.go  notion_test.go  notion_workflow_test.go  plan.go  root.go  run.go  skill.go  spec.go  spec_test.go  test.go
dagger/: .gitignore  dagger.json  go.mod  go.sum  main.go
templates/: context-scaffold.md  research-scaffold.md  spec-scaffold.md  templates.go
tests/: test_config.py  test_runner.py
(+254 files in other folders)
