[project]
name = "spektacular"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"

[project.scripts]
spektacular = "spektacular.cli:main"
dependencies = [
    "anthropic>=0.82.0",
    "click>=8.3.1",
    "jinja2>=3.1.6",
    "markdown>=3.10.2",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.3",
    "textual>=0.50.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.package-data]
spektacular = ["defaults/*.*"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
]
